--- a/src/scss/utility/_background.scss
+++ b/src/scss/utility/_background.scss
@@ -1,3 +1,7 @@
 .bg-gray {
-    background-color: get-color('gray-ligher');
+    background-color: get-color('gray-lighter');
+}
+
+.bg-white {
+    background-color: white;
 }
