--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: get-color('gray-ligher');
+    background-color: get-color('gray-lighter');
     color: get-color('black-normal');
     font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 16px;
@@ -47,4 +47,10 @@ h6 {
 a {
     color: get-color('green-normal');
     text-decoration: none;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
 }
