--- a/src/scss/component/_tmp.scss
+++ b/src/scss/component/_tmp.scss
@@ -1,9 +1,3 @@
-.page-header {
-    background-color: white;
-    padding-top: get-space('s');
-    padding-bottom: get-space('s');
-}
-
 .header-nav {
     &__list {
         @include list-unstyled();
@@ -23,8 +17,70 @@
     }
 }
 
+.search-section {
+    background-color: get-color('green-normal');
+    padding-top: get-space('xxl');
+    padding-bottom: get-space('xxl');
+    &__heading {
 
-.page-footer {
-    background-color: white;
-    height: 300px;
+    }
+}
+
+.section {
+    &__heading {
+        margin: 0 0 get-space('xl');
+    }
+    &__footer {
+        margin-top: get-space('l');
+        text-align: center;
+    }
+}
+
+.header-auth {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.recipe {
+    &__content {
+        background-color: white;
+        padding: get-space('xl') get-space('l');
+        border-radius: 4px;
+        margin-top: get-space('xl');
+        & p {
+           margin: 0; 
+        }
+        & p + p {
+            margin-top: get-space('m');
+        }
+    }
+}
+
+.recipe-header {
+    display: flex;
+    align-items: center;
+    background-color: get-color('black-dark');
+    position: relative;
+    min-height: 440px;
+    padding: get-space('xl') 0;
+    &__cover {
+        background-size: cover;
+        background-position: center;
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        opacity: 0.40;
+    }
+    &__main {
+        position: relative;
+        text-align: center;
+    }
+    &__title {
+        color: white;
+        font-size: 48px;
+        line-height: 48px;
+        font-weight: bold;
+    }
 }
