--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -6,7 +6,7 @@ $colors: (
 
     "gray-lighter": #F1F2F4,
     "gray-light": #F1F2F4,
-    "gray-normal": #F1F2F4,
+    "gray-normal": #D5D9DD,
 
     "green-normal": #27AE60
 );
@@ -24,9 +24,9 @@ $typography: (
         "font-weight": normal
     ),
     "preset3": (
-        "font-size": 18px,
-        "line-height": 24px,
-        "font-weight": bold
+        "font-size": 24px,
+        "line-height": 32px,
+        "font-weight": normal
     ),
     "preset4": (
         "font-size": 16px,
