--- a/src/scss/component/_form.scss
+++ b/src/scss/component/_form.scss
@@ -1,16 +1,97 @@
-.form-label {
-    margin-block: get-space('xs');
-    display: block;
+%form-control-font {
+    font-family: inherit;
+    font-size: inherit; 
+    line-height: inherit;
 }
 
-.form-control {
+%form-control-border {
+    border: 1px solid get-color('gray-normal');
+    border-radius: 4px;
+}
+
+%form-control-bg {
+    background-color: white;
+}
+
+.form-label {
+    display: inline-block;
+    margin: 0 0 get-space('xs');
+}
+
+.form-input {
     display: block;
     line-height: 40px;
-    border-radius: 4px;
-    background-color: get-color('gray-lighter');
-    border: none;
     width: 100%;
+    height: 40px;
     padding: 0 get-space('s');
-    font-size: inherit;
-    font-family: inherit;
+    @extend %form-control-border;
+    @extend %form-control-font;
+    @extend %form-control-bg;
+}
+
+.form-textarea {
+    width: 100%;
+    padding: get-space('s');
+    @extend %form-control-border;
+    @extend %form-control-font;
+    @extend %form-control-bg;
+}
+
+.form-select {
+    height: 40px;
+    padding: 0 get-space('s');
+    cursor: pointer;
+    @extend %form-control-border;
+    @extend %form-control-font;
+    @extend %form-control-bg;
+}
+
+.form-checkbox {
+    display: flex;
+    align-items: center;
+    &__label {
+        margin-left: get-space('xs');
+        cursor: pointer;
+    }
+    &__control {
+        width: 16px;
+        height: 16px;
+        margin: 0;
+        cursor: pointer;
+        @extend %form-control-bg;
+    }
+}
+
+.form-radio {
+    display: flex;
+    align-items: center;
+    &__label {
+        margin-left: get-space('xs');
+        cursor: pointer;
+    }
+    &__control {
+        width: 16px;
+        height: 16px;
+        margin: 0;
+        cursor: pointer;
+        @extend %form-control-bg;
+    }
+}
+
+.form-radio-row {
+    display: flex;
+    margin-left: get-space('xs') * -1;
+    & > .form-radio {
+        margin-left: get-space('xs');
+    }
+}
+
+.form-file {
+    background-color: get-color('gray-light');
+    border-radius: 4px;
+    border: 2px dashed get-color('gray-normal');
+    padding: get-space('l') get-space('s');
+    width: 100%;
+    cursor: pointer;
+    @extend %form-control-font;
 }
