--- a/src/scss/component/_recipe-card.scss
+++ b/src/scss/component/_recipe-card.scss
@@ -7,6 +7,12 @@
     }
     &__title {
         @include typo('preset5');
-        margin: 0 0 get-space('xs') 0;
+        margin: 0;
+    }
+    &__tags {
+        margin-top: get-space('xs');
+    }
+    &__btn {
+        margin-top: get-space('s');
     }
 }
