--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -8,7 +8,9 @@ $colors: (
     "gray-light": #F1F2F4,
     "gray-normal": #D5D9DD,
 
-    "green-normal": #27AE60
+    "green-normal": #27AE60,
+
+    "yellow-normal": #F2C94C
 );
 
 // Typography
