--- a/src/scss/page/_recipe.scss
+++ b/src/scss/page/_recipe.scss
@@ -1,3 +1,57 @@
+.recipe {
+    &__content {
+        background-color: white;
+        padding: get-space('xl') get-space('l');
+        border-radius: 4px;
+        margin-top: get-space('xl');
+        & p {
+           margin: 0; 
+        }
+        & p + p {
+            margin-top: get-space('m');
+        }
+    }
+}
+
+.recipe-header {
+    display: flex;
+    align-items: center;
+    background-color: get-color('black-dark');
+    position: relative;
+    min-height: 440px;
+    padding: get-space('xl') 0;
+    &__cover {
+        background-size: cover;
+        background-position: center;
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        opacity: 0.40;
+    }
+    &__main {
+        position: relative;
+        text-align: center;
+    }
+    &__title {
+        color: white;
+        font-size: 48px;
+        line-height: 48px;
+        font-weight: bold;
+        margin: 0;
+    }
+    &__stars {
+        margin-top: get-space('l');
+    }
+    &__reviews {
+        color: white;
+        display: inline-block;
+        text-decoration: underline;
+        margin-top: get-space('xs');
+    }
+}
+
 .adding-review {
     &__heading {
         margin: 0 0 get-space('l');
