--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -8,9 +8,13 @@ $colors: (
     "gray-light": #F1F2F4,
     "gray-normal": #D5D9DD,
 
+    "green-light": #27C168,
     "green-normal": #27AE60,
+    "green-dark": #209752,
 
-    "yellow-normal": #F2C94C
+    "yellow-normal": #F2C94C,
+
+    "red-normal": #df5555
 );
 
 // Typography
