--- a/src/scss/component/__load.scss
+++ b/src/scss/component/__load.scss
@@ -3,4 +3,7 @@
 @import "./form";
 @import "./star-rating";
 @import "./tags";
+@import "./pagination";
 @import "./recipe-card";
+@import "./page-header";
+@import "./page-footer";
