--- a/src/scss/component/_form.scss
+++ b/src/scss/component/_form.scss
@@ -7,10 +7,42 @@
 %form-control-border {
     border: 1px solid get-color('gray-normal');
     border-radius: 4px;
+    outline: none;
+    transition: border-color 200ms;
+    &.is-invalid {
+        border-color: get-color('red-normal');
+    }
+    &:not(.is-invalid):not([disabled]):active,
+    &:not(.is-invalid):not([disabled]):focus,
+    &:not(.is-invalid):not([disabled]):hover {
+        border-color: get-color('black-normal');
+    }
 }
 
 %form-control-bg {
     background-color: white;
+    &[disabled] {
+        background-color: get-color('gray-light');
+    }
+}
+
+.form {
+    position: relative;
+}
+
+.form-error {
+    background-color: get-color('red-normal');
+    color: white;
+    border-radius: 4px;
+    padding: get-space('s');
+    margin: 0;
+    @include typo('preset7');
+}
+
+.input-error {
+    color: get-color('red-normal');
+    margin: get-space('xxs') 0 0;
+    @include typo('preset7');
 }
 
 .form-label {
@@ -44,6 +76,9 @@
     @extend %form-control-border;
     @extend %form-control-font;
     @extend %form-control-bg;
+    &[disabled] {
+        cursor: inherit;
+    }
 }
 
 .form-checkbox {
@@ -74,7 +109,6 @@
         height: 16px;
         margin: 0;
         cursor: pointer;
-        @extend %form-control-bg;
     }
 }
 
