--- a/src/scss/component/_star-rating.scss
+++ b/src/scss/component/_star-rating.scss
@@ -1,4 +1,5 @@
 .star-rating {
+    display: flex;
     color: white;
     font-size: 16px;
     line-height: 1em;
@@ -7,5 +8,8 @@
     }
     & > *.is-active {
         color: get-color('yellow-normal');
+    }
+    & > * + * {
+        margin-left: get-space('xs');
     }
 }
