--- a/src/scss/component/__load.scss
+++ b/src/scss/component/__load.scss
@@ -1,9 +1,11 @@
 @import "./tmp";
 @import "./button";
+@import "./alert";
 @import "./form";
 @import "./star-rating";
 @import "./tags";
 @import "./pagination";
+@import "./logo";
 @import "./recipe-card";
 @import "./page-header";
 @import "./page-footer";
