--- a/src/scss/component/_page-footer.scss
+++ b/src/scss/component/_page-footer.scss
@@ -1,5 +1,8 @@
 .page-footer {
-    background-color: white;
-    padding-top: get-space('l');
-    padding-bottom: get-space('l');
+    padding-top: get-space('xxl');
+    &__inner {
+        background-color: white;
+        padding-top: get-space('l');
+        padding-bottom: get-space('l');
+    }
 }
