--- a/src/scss/layout/__load.scss
+++ b/src/scss/layout/__load.scss
@@ -1,6 +1,5 @@
 @import "./grid";
 @import "./spaces";
 @import "./containers";
-@import "./page-header";
-@import "./page-footer";
+@import "./page";
 @import "./section";
