--- a/src/scss/component/_recipe-card.scss
+++ b/src/scss/component/_recipe-card.scss
@@ -2,6 +2,7 @@
     background-color: white;
     border-radius: 4px;
     overflow: hidden;
+    height: 100%;
     &__body {
         padding: get-space('l') get-space('m');
     }
