--- a/src/scss/component/__load.scss
+++ b/src/scss/component/__load.scss
@@ -8,4 +8,7 @@
 @import "./logo";
 @import "./recipe-card";
 @import "./page-header";
+@import "./page-heading";
 @import "./page-footer";
+@import "./sidebar";
+@import "./box";
