--- a/src/scss/component/_recipe-card.scss
+++ b/src/scss/component/_recipe-card.scss
@@ -12,9 +12,9 @@
     }
     &__stars {
         color: get-color('gray-normal');
-        margin-top: get-space('xs');
+        margin-top: get-space('s');
     }
     &__btn {
-        margin-top: get-space('s');
+        margin-top: get-space('m');
     }
 }
