--- a/src/scss/component/_tags.scss
+++ b/src/scss/component/_tags.scss
@@ -13,7 +13,7 @@
         background-color: #E3E6E8;
         color: #646464;
         border-radius: 50px;
-        padding: 4px 8px;
+        padding: get-space('xs') get-space('s');
         font-size: 14px;
         line-height: 16px;
     }
