--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,11 +1,16 @@
+/**
+ * Page
+ * 
+ * Used to position the topmost parts of the layout.
+ */
+
 .page {
     @supports (flex-direction: column) {
         display: flex;
         flex-direction: column;
         min-height: 100vh;
     }
-
-    &__footer {
-        margin-top: auto;
+    &__main {
+        flex: 1 1 auto;
     }
 }
