--- a/src/scss/layout/_spaces.scss
+++ b/src/scss/layout/_spaces.scss
@@ -1,1 +1,19 @@
-@include make-space($spaces, $space-prefixes, $grid-breakpoints);
+/**
+ * Spaces
+ * 
+ * Indent Helper Classes
+ */
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+
+    @each $attr-short, $attr-long in  $space-prefixes {
+        @each $name, $value in $spaces {
+            .#{$attr-short}#{$infix}-#{$name} {
+            @include media-breakpoint-up($breakpoint) {
+                #{$attr-long}: #{$value}#{'px'};
+                }
+            }
+        }
+    } 
+}
