--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -1,29 +1,15 @@
 .hero {
     display: flex;
     align-items: center;
-    position: relative;
     min-height: 440px;
     padding: get-space('xl') 0;
-    background-color: get-color('gray-normal');
-    &__cover {
-        background-size: cover;
-        background-position: center;
-        position: absolute;
-        left: 0;
-        top: 0;
-        right: 0;
-        bottom: 0;
-    }
+    background-color: get-color('green-normal');
+    text-align: center;
     &__heading {
         color: white;
         font-size: 48px;
         line-height: 56px;
         font-weight: bold;
         margin: 0;
-        text-shadow: 0 8px 16px hsl(200deg 10% 20% / 15%), 0 1px 0 hsl(200deg 10% 20% / 10%), 0 -1px 0 hsl(200deg 10% 20% / 10%), 1px 0 0 hsl(200deg 10% 20% / 10%), -1px 0 0 hsl(200deg 10% 20% / 10%);
-    }
-    &__main {
-        position: relative;
-        text-align: center;
     }
 }
