--- a/src/scss/component/__load.scss
+++ b/src/scss/component/__load.scss
@@ -3,6 +3,7 @@
 @import "./alert";
 @import "./form";
 @import "./star-rating";
+@import "./rating";
 @import "./tags";
 @import "./pagination";
 @import "./logo";
