--- a/src/scss/component/_form.scss
+++ b/src/scss/component/_form.scss
@@ -39,6 +39,10 @@
 .form-label {
     display: inline-block;
     margin: 0 0 get-space('xs');
+    &.is-required::after {
+        content: ' *';
+        color: get-color('red-normal');
+    }
 }
 
 .form-input {
